--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,10 +2,7 @@
   "compilerOptions": {
     "module": "es2015",
     "moduleResolution": "node",
-    "target": "es5",
-    "sourceMap": true,
     "allowSyntheticDefaultImports": true,
-    "noImplicitThis": true,
     "strict": true,
     "lib": [
       "dom",
@@ -16,7 +13,7 @@
   "include": [
     "./src/**/*.ts"
   ],
-  "exclude": [
-    "node_modules"
+  "files" : [
+    "vue-shims.d.ts"
   ]
 }
